--- a/test/cent7-jdk7-tomcat7-jenkins/Dockerfile
+++ b/test/cent7-jdk7-tomcat7-jenkins/Dockerfile
@@ -15,7 +15,7 @@ RUN mkdir -p "$CATALINA_HOME"
 WORKDIR /applications
 # INSTALL TOMCAT
 #RUN wget -q http://mirror.apache-kr.org/tomcat/tomcat-$TOMCAT_MAJOR_VERSION/v$TOMCAT_VERSION/bin/apache-tomcat-$TOMCAT_VERSION.tar.gz
-RUN curl -SL "$TOMCAT_TGZ_URL" -o tomcat.tar.gz \
+RUN curl -SL "$TOMCAT_TGZ_URL" -o tomcat.tar.gz
 
 #RUN tar -xvf apache-tomcat-$TOMCAT_VERSION.tar.gz
 RUN tar -xvf tomcat.tar.gz
