--- a/base/Cent7+JDK7+Tomcat7/Dockerfile
+++ b/base/Cent7+JDK7+Tomcat7/Dockerfile
@@ -12,10 +12,11 @@ RUN yum install -y net-tools wget tar
 
 WORKDIR /applications
 # INSTALL TOMCAT
-RUN curl -SL "$TOMCAT_TGZ_URL" -o tomcat.tar.gz
+RUN curl "$TOMCAT_TGZ_URL" -o tomcat.tar.gz
 
 RUN tar xvf tomcat.tar.gz
 
 RUN rm -rf tomcat.tar.gz
 
 EXPOSE 8080
+
