--- a/base/Cent7+JDK7+Tomcat7/Dockerfile
+++ b/base/Cent7+JDK7+Tomcat7/Dockerfile
@@ -6,13 +6,13 @@ ENV CATALINA_HOME /applications/tomcat
 ENV PATH $CATALINA_HOME/bin:$PATH
 ENV TOMCAT_MAJOR_VERSION 7
 ENV TOMCAT_VERSION 7.0.57
-ENV TOMCAT_TGZ_URL http://mirror.apache-kr.org/tomcat/tomcat-$TOMCAT_MAJOR/v$TOMCAT_VERSION/bin/apache-tomcat-$TOMCAT_VERSION.tar.gz
+ENV TOMCAT_TGZ_URL http://mirror.apache-kr.org/tomcat/tomcat-$TOMCAT_MAJOR_VERSION/v$TOMCAT_VERSION/bin/apache-tomcat-$TOMCAT_VERSION.tar.gz
 
 RUN yum install -y net-tools wget tar
 
 WORKDIR /applications
 # INSTALL TOMCAT
-RUN wget -q http://mirror.apache-kr.org/tomcat/tomcat-$TOMCAT_MAJOR_VERSION/v$TOMCAT_VERSION/bin/apache-tomcat-$TOMCAT_VERSION.tar.gz
+RUN wget -q $TOMCAT_TGZ_URL
 
 RUN mv apache-tomcat-$TOMCAT_VERSION.tar.gz tomcat.tar.gz
 
