--- a/base/Cent7+JDK7+Tomcat7/Dockerfile
+++ b/base/Cent7+JDK7+Tomcat7/Dockerfile
@@ -10,13 +10,16 @@ ENV TOMCAT_TGZ_URL http://mirror.apache-kr.org/tomcat/tomcat-$TOMCAT_MAJOR_VERSI
 
 RUN yum install -y net-tools wget tar
 
+RUN mkdir /applications
+
 WORKDIR /applications
+
 # INSTALL TOMCAT
 RUN wget -q $TOMCAT_TGZ_URL
 
 RUN tar xvf apache-tomcat-$TOMCAT_VERSION.tar.gz
 
-RUN mv apache-tomcat-$TOMCAT_VERSION.tar.gz tomcat
+RUN mv apache-tomcat-$TOMCAT_VERSION tomcat
 
 RUN rm -rf apache-tomcat-$TOMCAT_VERSION.tar.gz
 
