--- a/spring-mvc-demo/Dockerfile
+++ b/spring-mvc-demo/Dockerfile
@@ -9,6 +9,6 @@ RUN mv spring-mvc-demo.war /applications/tomcat/webapps/
 
 WORKDIR /applications/tomcat/bin
 
-EXPOSE 8080
+RUN ./startup.sh
 
-RUN ./catalina.sh start
+EXPOSE 8080
